--- a/app/src/main/res/layout/activity_review_book.xml
+++ b/app/src/main/res/layout/activity_review_book.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    style="@style/ReviewBookActivity"
     android:layout_height="match_parent"
     tools:context=".ReviewBookActivity">
     <androidx.constraintlayout.widget.Guideline
@@ -26,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline1"
         android:orientation="vertical"
-        android:weightSum="3">
+        android:weightSum="4">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,38 +37,80 @@
             android:textStyle="bold"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black">
+        </TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/InstructionTV"
+            android:text="@string/instruction"
+            android:layout_weight="1"
+            android:textColorHighlight="@color/Red"
+            android:textColor="@color/black">
+        </TextView>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_margin="10dp"
-            android:layout_gravity="center">
-        <ImageButton
-            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:weightSum="7">
+
+        <ToggleButton
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/star1"
-            android:src="@drawable/star_icon"/>
-        <ImageButton
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            style="@style/ToggleButtonWithIconsOnly"
+            app:icon="@drawable/star_icon"/>
+                <ToggleButton
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/star1"
+                    android:textOn=" "
+                    android:textOff=" "
+                    android:layout_weight="1"
+                    android:background="@drawable/star_icon"/>
+        <ToggleButton
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/star2"
-            android:src="@drawable/star_icon"/>
-        <ImageButton
-            android:layout_width="wrap_content"
+            android:textOn=" "
+            android:textOff=" "
+            android:layout_weight="1"
+            android:background="@drawable/star_icon"/>
+        <ToggleButton
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/star3"
-            android:src="@drawable/star_icon"/>
-        <ImageButton
-            android:layout_width="wrap_content"
+            android:textOn=" "
+            android:textOff=" "
+            android:layout_weight="1"
+            android:background="@drawable/star_icon"/>
+        <ToggleButton
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/star4"
-            android:src="@drawable/star_icon"/>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/star5"
-            android:src="@drawable/star_icon"/>
+            android:textOn=" "
+            android:textOff=" "
+            android:layout_weight="1"
+            android:background="@drawable/star_icon"/>
+            <ToggleButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/star5"
+                android:textOn=" "
+                android:textOff=" "
+                android:layout_weight="1"
+                android:background="@drawable/star_icon"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:visibility="invisible"
+                    style="@style/ToggleButtonWithIconsOnly"
+                    app:icon="@drawable/star_icon"/>
+
         </LinearLayout>
     </LinearLayout>
     <com.google.android.material.textfield.TextInputLayout
