--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -7,5 +7,9 @@
         android:id="@+id/favorite"
         android:icon="@drawable/favorite_xml"
         android:title="Favorite"/>
+    <item
+        android:id="@+id/setting"
+        android:icon="@drawable/settings_icon"
+        android:title="Settings"/>
 
 </menu>
