--- a/app/src/main/res/layout/activity_perform_function_on_selected_book.xml
+++ b/app/src/main/res/layout/activity_perform_function_on_selected_book.xml
@@ -180,6 +180,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/favorite_xml"
+        android:textOff=" "
+        android:textOn=" "
         app:layout_constraintTop_toBottomOf="@id/ll3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
