--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -6,11 +6,9 @@
     tools:context=".Fragments.FavouritesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favbook_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Favourites Fragment"
-        android:textSize="30sp"
-        android:gravity="center"/>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
